--- a/skeleton/files/isotope-demo/theme/css/isotopedemo.css
+++ b/skeleton/files/isotope-demo/theme/css/isotopedemo.css
@@ -339,13 +339,16 @@ input[type="tel"] {
 	padding-bottom: 10px;
 	margin-bottom: 10px;
 }
+
 .mod_iso_productfilter label {
 	display: block;
 	line-height: 1.4;
 }
+
 .mod_iso_productfilter .limit {
 	margin-top: 10px;
 }
+
 .mod_iso_productfilter a.clear_filters {
 	font-size: 1.2em;
 }
@@ -365,6 +368,7 @@ input[type="tel"] {
     font-size: 0.8em;
     margin-right: 5px;
 }
+
 .steps li.last:after {
     content: "";
 }
@@ -375,12 +379,6 @@ input[type="tel"] {
 }
 
 
-/* Remove */
-.remove a,
-#container .remove a:hover {
-	color: transparent;
-	text-decoration: none;
-}
 
 /* Shopping Cart - Mini */
 #left h2 {
@@ -406,13 +404,6 @@ input[type="tel"] {
 	margin-right: 5px;
 }
 
-#left .remove a:after {
-	color: #0098ac;
-	content: "  \f057";
-    font-family: FontAwesome;
-    font-size: 1.8em;
-}
-
 .cart {
 	border-top: 2px dotted #ccc;
 	margin-top: 10px;
@@ -422,6 +413,7 @@ input[type="tel"] {
 .checkout .button {
 	width: 100%;
 }
+
 
 
 /* Shopping Cart */
@@ -455,11 +447,6 @@ input[type="tel"] {
 	text-align: right;
 }
 
-.mod_iso_cart .col_5 {
-	padding: 5px;
-	text-align: right;
-	width: 5px;
-}
 
 .mod_iso_cart .col_6 {
 	padding: 5px;
@@ -512,12 +499,19 @@ input[type="tel"] {
 	margin-right: 5px;
 }
 
-#iso_mod_checkout_address .radio_container span {
-	display: inline;
+#iso_mod_checkout_address label {
+	display: block;
+	font-weight: bold;
+	margin-top: 10px;
 }
 
-#iso_mod_checkout_address label {
-	font-size: 1em;
+#iso_mod_checkout_address fieldset label {
+	display: inline;
+	font-weight: normal;
+}
+
+#iso_mod_checkout_address fieldset span {
+	display: block;
 }
 
 #iso_mod_checkout_address #opt_ShippingAddress_1 {
@@ -532,7 +526,7 @@ input[type="tel"] {
 	margin-right: 5px;
 }
 
-#iso_mod_checkout_shipping .radio_container span {
+#iso_mod_checkout_shipping fieldset span {
 	display: inline;
 }
 
@@ -550,19 +544,51 @@ input[type="tel"] {
 
 
 /* Step 4 */
-a.edit {
-	color: #0098ac;
-    font-size: 1.4em;
-	text-decoration: none;
+.remove a,
+a.edit,
+a.remove {
+	display: block;
+	margin-bottom: 10px;
+  text-indent: -9999px;
+  width: 30px;
+}
+
+.remove a:before,
+a.edit:before,
+a.remove:before {
+	display: inline-block;
+  font-family: FontAwesome;
+	font-size: 25px;
+  position: absolute;
+  text-indent: 9999px;
 }
 
 a.edit:before {
-	content: "\f044  ";
-    font-family: FontAwesome;
+	content: "\f044";
 }
 
-a.edit:hover {
-	color: #473F3A !important;
+.remove a:before,
+a.remove:before {
+	content: "\f057";
+}
+
+.info_container {
+	font-size: 1.4em;
+	margin-top: 40px;
+}
+
+.info_container .edit {
+	display: inline;
+	text-decoration: none;
+	text-indent: inherit;
+	width: 100%;
+}
+
+.info_container .edit:before {
+	display: inherit;
+	font-size: 1em;
+	position: inherit;
+	text-indent: inherit;
 }
 
 #iso_mod_checkout_review .info {
@@ -615,10 +641,10 @@ a.edit:hover {
 /* Orderdetails */
 .mod_iso_orderdetails h2:first-child {
 	border-bottom: 2px solid #0098AC;
-    color: #0098AC;
-    font-size: 2.4em;
-    margin-top: 1em;
-    padding-bottom: 5px;
+  color: #0098AC;
+  font-size: 2.4em;
+  margin-top: 1em;
+  padding-bottom: 5px;
 }
 
 .mod_iso_orderdetails h2 {
@@ -631,37 +657,6 @@ a.edit:hover {
 .mod_iso_orderdetails .info {
 	margin-bottom: 10px;
 }
-/*
-
-.mod_iso_orderdetails .col_0 {
-	padding: 5px;
-	width: 40px;
-}
-
-.mod_iso_orderdetails .col_1 {
-	padding: 5px;
-	width: 350px;
-}
-
-.mod_iso_orderdetails .col_2,
-.mod_iso_orderdetails .col_3 {
-	padding: 5px;
-	width: 120px;
-	text-align: right;
-}
-
-.mod_iso_orderdetails .col_4 {
-	padding: 5px;
-	width: 20px;
-	text-align: right;
-}
-
-.mod_iso_orderdetails .col_5 {
-	padding: 5px;
-	text-align: right;
-	width: 20px;
-}
-*/
 
 .mod_iso_orderdetails .row_odd td {
 	background: #fff;
@@ -681,14 +676,14 @@ a.edit:hover {
 
 .mod_iso_orderdetails .downloads a {
 	color: #0098ac;
-    font-size: 1.8em;
-    line-height: 1.5;
+  font-size: 1.8em;
+  line-height: 1.5;
 	text-decoration: none;
 }
 
 .mod_iso_orderdetails .downloads a:before {
 	content: "\f019  ";
-    font-family: FontAwesome;
+  font-family: FontAwesome;
 }
 
 .mod_iso_orderdetails .downloads a:hover {
@@ -714,7 +709,6 @@ a.edit:hover {
 	font-weight: bold;
 	display: block;
 }
-
 #main .mod_iso_productlist .formbody .submit_container {
 	border-top: none;
 	padding-top: 10px;
@@ -750,6 +744,12 @@ a.edit:hover {
 	margin-top: 0.5em;
 }
 
+.mod_iso_productlist em {
+	background: yellow;
+	font-style: normal;
+}
+
+#main .mod_iso_cart_address .formbody .widget-submit,
 #main .mod_iso_productreader .formbody .submit_container {
 	border-top: 0;
 	padding-top: 5px;
@@ -799,15 +799,15 @@ a.edit:hover {
 
 .mod_iso_productreader .listen a {
 	font-size: 1.4em;
-    border: 1px solid #e1dad6;
-    background: #1899ae; /* Old browsers */
-    background: -moz-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1899ae), color-stop(100%,#6ac4cf)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #1899ae 0%, #6ac4cf 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1899ae', endColorstr='#6ac4cf',GradientType=0 ); /* IE6-9 */
+  border: 1px solid #e1dad6;
+  background: #1899ae; /* Old browsers */
+  background: -moz-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1899ae), color-stop(100%,#6ac4cf)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #1899ae 0%, #6ac4cf 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #1899ae 0%, #6ac4cf 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1899ae', endColorstr='#6ac4cf',GradientType=0 ); /* IE6-9 */
 	color: #fff;
 	font-weight: bold;
 	padding: 5px;
@@ -857,4 +857,29 @@ a.edit:hover {
 }
 .mod_iso_cumulativefilter .clearall {
 	font-size: 1em;
+}
+
+
+/* Category Filter */
+.mod_iso_categoryfilter {
+	font-size: 1.6em;
+	line-height: 1.5;
+}
+
+.mod_iso_categoryfilter ul {
+	list-style-type: disc;
+	padding-left: 20px;
+}
+
+.mod_iso_categoryfilter a {
+	text-decoration: none;
+}
+
+.mod_iso_categoryfilter a.active {
+	color: #0098ac;
+}
+
+.mod_iso_categoryfilter a.active:after {
+	content: "  \f00c";
+  font-family: FontAwesome;
 }
